--- a/templates/index.html
+++ b/templates/index.html
@@ -9,4 +9,10 @@
 <P>phone: 313123123123</P>
 <a href="/index"> click in!</a>
 </body>
+<style>
+    body {
+        background-image: url("/static/background.jpg");
+        background-size: cover;
+    }
+</style>
 </html>
